# testingpoly

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  polymarket_markets.json  pyproject.toml
data/semantic/: README.md  event_type_prototypes.jsonl  seed_records.jsonl
polymarket_geo/: __main__.py  api.py  config.py  db.py  event_resolver.py  gazetteer.py  geocode.py  infer.py  ingest.py  logging_config.py  models.py  pipeline.py  scheduler.py
polymarket_geo/migrations/: 001_initial.sql  002_event_venue_cache.sql
polymarket_geo/semantic/: __init__.py  calibrator.py  composer.py  decider.py  embedder.py  event_type.py  indexes.py  output_schema.py  retriever.py  scorer.py
polymarket_geo/tests/: test_geocode.py  test_infer.py  test_models.py
scripts/: build_indexes.py
