[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-geo"
version = "1.0.0"
description = "Polymarket prediction market geographic inference pipeline and API"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # API framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # HTTP client
    "httpx>=0.27.0",
    # Database
    "asyncpg>=0.29.0",
    # NLP
    "spacy>=3.7.0",
    # Data validation
    "pydantic>=2.6.0",
    # Scheduling
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
# LLM fallback providers (optional)
llm = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]
# Production logging
production = [
    "json-log-formatter>=0.5.0",
]
# Development/testing
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
# All optional deps
all = [
    "polymarket-geo[llm,production,dev]",
]

[project.scripts]
polymarket-geo = "polymarket_geo.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["polymarket_geo/tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
